#1071 - Appy retry mechanism for automation test
- add retry